# Daemon-Linux

./: README.md  build.sh  daemon.cpp  daemon.h  prompts.txt  script.sh  test.cpp
lab1/: README.md  build.sh  config.txt  daemon.cpp  daemon.h  test.cpp
lab2/: CMakeLists.txt  README.md  aux_methods.cpp  aux_methods.h  build.sh  questions.txt
lab2/connections/: conn.h  conn_fifo.cpp  conn_fifo.h  conn_mq.cpp  conn_mq.h  conn_shm.cpp  conn_shm.h
lab2/host/: host.cpp
lab3/: README.md  build.sh  interface_queue.h  main.cpp  mcsp_queue.cpp  mcsp_queue.h  notes.txt  results.txt  scsp_queue.cpp  scsp_queue.h  test_1.h  test_2.h  test_speed.h
